--- a/fcc-test-suite-template-master/css/style.css
+++ b/fcc-test-suite-template-master/css/style.css
@@ -1,3 +1,22 @@
-section {
-    height: 50%;
+body {
+    overflow: scroll;
 }
+
+header {
+    background-color: aquamarine;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+}
+
+section {
+    height: 400px;
+}
+
+@media screen and (max-width: 545px ){
+    body {
+        font-size: 1.15em; 
+        background-color: blanchedalmond;       
+     }
+    }
+  
